--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,12 @@
   "ConnectionStrings": 
   {
   "DefaultSQLConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskMs;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Jwt": 
+  {
+    "Key": "BuKeyEnAz32KarakterOlmali!!!OlArtik",
+    "Issuer": "Ben",
+    "Audience": "Sen",
+    "DurationInMinutes": 60
   }
 }
